k8s-specs/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  labels:
    app: my-app
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 3000           # Service port
      targetPort: 3000     # Container's port
      nodePort: 31000      # NodePort (static port to expose externally, in range 30000-32767)
